--- a/base.html
+++ b/base.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="./css/style.css">
     <!-- font awsome -->
     <link rel="stylesheet" href="/css/all.css">
+
+
 </head>
 <body>
     
-
 <!-------------Navigation-------------->
 
 <nav class="nav">
@@ -31,7 +32,7 @@
             <ul class="nav-items">
                 <li class="nav-link">
                     <i class="fas fa-home"></i>
-                    <a href="#" class="cool-link active">Home</a>
+                    <a href="base.html" class="cool-link active">Home</a>
                 </li>
                 <li class="nav-link">
                     <i class="fas fa-book-open"></i>
@@ -39,7 +40,7 @@
                 </li>
                 <li class="nav-link">
                     <i class="fas fa-award"></i>
-                    <a href="#" class="cool-link">Leaderboard</a>
+                    <a href="leaderboard.html" class="cool-link">Leaderboard</a>
                 </li>
             </ul>
         </div>
@@ -47,12 +48,18 @@
             <ul class="nav-items">
                 <li class="nav-link">
                     <i class="fas fa-sign-out-alt"></i>
-                    <a href="login.html">Logout</a>
+                    <a href="particles.html">Logout</a>
             </ul>
         </div>
     </div>
 </nav>
 <!----X---------Navigation---------X----->
+
+
+<div style="position: absolute; width: 100%; height: 100%;" id="particles-js"></div>
+<div id="particles-js" width="100%" height="100%">
+<canvas class="particles-js-canvas-el" width="1583" height="497" style="width: 100%; height: 100%;"></canvas>
+</div>
 
 
 
@@ -214,7 +221,7 @@
 
 </main>
 
-
+<!-- <div style="position: absolute; width: 100%; height: 100%;" id="particles-js"></div> -->
 
 <!---------X------------Main----------X--------->
 
@@ -233,6 +240,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur modi autem neque aliquid voluptatem ex accusantium quisquam odit. Pariatur iure numquam nobis provident nemo voluptatum voluptates quasi cumque cupiditate itaque.</p>
         
     </div> -->
+
     <div class="footer-bottom">
         <p>Copyright &copy; 2020 Pack of Leos.</p>
     </div>
@@ -240,11 +248,12 @@
 <!-------X--------Footer---------X------->
 
 
-
-
-
+<!-- Jquery File -->
 <script src="./js/Jquery3.6.0.min.js"></script>
 <!-- Custom Javascript file -->
 <script src="./js/main.js"></script>
+<script src="./js/particles.js"></script>
+<script src="./js/app.js"></script> 
+
 </body>
 </html>
