--- a/base.html
+++ b/base.html
@@ -48,7 +48,7 @@
             <ul class="nav-items">
                 <li class="nav-link">
                     <i class="fas fa-sign-out-alt"></i>
-                    <a href="particles.html">Logout</a>
+                    <a href="login.html">Logout</a>
             </ul>
         </div>
     </div>
